--- a/app/src/main/res/drawable-v24/rounded_button.xml
+++ b/app/src/main/res/drawable-v24/rounded_button.xml
@@ -2,8 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFF000"/>
-            <corners android:radius="30dp" />
+            <solid android:color="#1fFFFFFF" />
+            <stroke android:width="1dp"
+                android:color="#000"/>
         </shape>
     </item>
 </selector>
