--- a/app/src/main/res/menu/user.xml
+++ b/app/src/main/res/menu/user.xml
@@ -2,12 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/refresh"
+        android:title="@string/refresh"
+        android:icon="@drawable/ic_menu_refresh"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_settings"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/action_logout" />
 </menu>
