--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/libiter"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -102,7 +103,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="80dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/newbutton"
         android:text="Login"
         android:textColor="#FFF" />
 
